# local-caddy-proxy-manager

./: Cargo.toml  README.md  SPEC.md
src/: app.rs  main.rs  model.rs
src/caddy/: admin.rs
src/compose/: discovery.rs  mod.rs  parser.rs  writer.rs
src/docker/: client.rs  compose.rs  containers.rs  mod.rs
src/ui/: caddy_menu.rs  dashboard.rs  form.rs  help.rs  mod.rs  preview.rs
