[package]
name = "lcp"
version = "0.1.0"
edition = "2021"
description = "Local Caddy Proxy Manager — TUI dashboard for caddy-docker-proxy services"

[[bin]]
name = "lcp"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
bollard = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
open = "5"
anyhow = "1"
glob = "0.3"
